Docs homepage, nav change, case study style (#373)
* New nav items

* Moving /blog to /news

* Placeholder for docs homepage

* Placeholder for events homepage

* Enabling global nav site wide

* Placeholder page for merch

* Merch placeholder page

* Nav highlighting

* Note about local dev redirect loop

* Active highlgith, nav global

* Initial build of the docs page

* Matching companies on homepage to bottom of docs

* Adding coming soon banner over case study card

* Grammar, spelling, and misc fixes from @robin850

* Moving /news back to /blog

* Home page improvement for vertical

* Using home page cards

* Updating docs to use look/feel of other site elements

* Guides layout for desktop & mobile

* Update doximity.html with new copy

* Corner ribbon removed from Doximity logo on front.

* Removing icon bars that were not used in final layout

* Removing merch page as URL goes to shopify site

* Most changes suggested by Amanda above

* Social graphic for Doximity Case Study

---------

Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -88,6 +88,10 @@
 
         }
 
+        &.active a span {
+          color: $color-red !important;          
+        }
+
       }
 
       &:first-child {
