Update banner.html with tutorial

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeb182aDN5cKZTuyjn3Tdbqx" target="_blank">
-      Watch all Rails World 2024 talks on YouTube now.
+    <a class="common-button--text" href="https://guides.rubyonrails.org/getting_started.html" target="_blank">
+      [New Getting Started Tutorial] Build an e-commerce app with Rails 8.
     </a>
   </p>
 </div>
