--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -1,8 +1,10 @@
+---
+---
+
 @charset 'utf-8';
 
 @import 'base/reset';
 @import 'base/variables';
-@import 'common/shape';
 
 @import 'world/2025/base/colors';
 @import 'world/2025/base/body';
