--- a/_sass/world/2025/base/_typography.scss
+++ b/_sass/world/2025/base/_typography.scss
@@ -1,18 +1,19 @@
-$font-weight-900: 'wght' 800, 'wdth' 100, 'slnt' -12;
+$font-weight-900: 'wght' 900, 'wdth' 100, 'slnt' -12;
 
 $xxx-large: 62px;
-$xx-large: 35px;
-$x-large: 42px;
+$xx-large: 38px;
+$x-large: 36px;
 $large: 30px;
+$medium: 20px;
 
 h1 {
   color: white;
   font-size: $xxx-large;
   font-variation-settings: $font-weight-900;
-  font-style: italic;
+  letter-spacing: 1px;
 
   @media only screen and (max-width: 600px) {
-    font-size: 40px;
+    font-size: $xx-large;
   }
 }
 
@@ -20,10 +21,10 @@ h2 {
   color: white;
   font-size: $x-large;
   font-variation-settings: $font-weight-900;
-  font-style: italic;
+  letter-spacing: 1px;
 
   @media only screen and (max-width: 600px) {
-    font-size: 23px;
+    font-size: $medium;
   }
 }
 
@@ -31,10 +32,10 @@ p {
   color: white;
   font-size: $large;
   font-variation-settings: $font-weight-900;
-  font-style: italic;
+  letter-spacing: 1px;
 
   @media only screen and (max-width: 600px) {
-    font-size: 16px;
+    font-size: $medium;
   }
 }
 
