--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -11,4 +11,6 @@
 @import 'world/2025/base/typography';
 
 @import 'world/2025/common/button';
+@import 'world/2025/common/gradient_animation';
+
 @import 'world/2025/modules/landing_page';
