--- a/_sass/world/2025/base/_body.scss
+++ b/_sass/world/2025/base/_body.scss
@@ -1,6 +1,5 @@
 body {
   font-family: "acumin-variable", sans-serif;
-  background-image: $purple-gradient;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -8,4 +7,7 @@ body {
   min-height: 100vh;
   width: 100%;
   overflow-x: hidden;
+  background: $purple-pink-gradient;
+  background-size: 200% 200%;
+  animation: gradient-dissolve 5s ease infinite;
 }
