--- a/_sass/world/2025/base/_colors.scss
+++ b/_sass/world/2025/base/_colors.scss
@@ -1,3 +1,3 @@
 $dark-purple: #3B1D62;
 $pink-purple: #880C51;
-$purple-gradient: linear-gradient(to top, $pink-purple 0%, $dark-purple 47%);;
+$purple-pink-gradient: linear-gradient(180deg, $dark-purple, $dark-purple, $pink-purple, $pink-purple);
