rails world 2025 - add links and update metatags

--- a/_sass/world/2025/modules/_landing_page.scss
+++ b/_sass/world/2025/modules/_landing_page.scss
@@ -19,14 +19,12 @@
 }
 
 .landing-page .cta-with-icon {
+  margin-top: 10px;
+  text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-
-  @media only screen and (max-width: 600px) {
-    gap: 10px;
-  }
+  gap: 10px;
 
   .icon {
     width: 20px;
