--- a/_sass/world/2025/base/_typography.scss
+++ b/_sass/world/2025/base/_typography.scss
@@ -38,7 +38,7 @@ p {
   letter-spacing: 1px;
 
   @media only screen and (max-width: 600px) {
-    font-size: $large;
+    font-size: 18px;
   }
 }
 
