rails world 2025 - add sponsorship cta and footer

--- a/_sass/world/2025/base/_typography.scss
+++ b/_sass/world/2025/base/_typography.scss
@@ -1,3 +1,5 @@
+$font-weight-200: 'wght' 200, 'wdth' 100;
+$font-weight-600: 'wght' 600, 'wdth' 100, 'slnt' -12;
 $font-weight-900: 'wght' 900, 'wdth' 100, 'slnt' -12;
 
 $xxx-large: 52px;
