--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://guides.rubyonrails.org/getting_started.html" target="_blank">
-      [New Getting Started Tutorial] Build an e-commerce app with Rails 8.
+    <a class="common-button--text" href="https://rubyonrails.org/2025/3/7/apply-to-speak-at-rails-world-2025" target="_blank">
+      [Rails World 2025] CFP is now open - submit by April 10
     </a>
   </p>
 </div>
