Full page company layout and first group working

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,7 @@
 @import 'modules/banner';
 @import 'modules/blog';
 @import 'modules/cards';
+@import 'modules/company';
 @import 'modules/core';
 @import 'modules/cornerribbon';
 @import 'modules/docs';
