--- a/_layouts/company.html
+++ b/_layouts/company.html
@@ -1,104 +1,121 @@
 ---
 layout: default
 ---
-<div class="company-profile">
-  <div class="company-header">
-    <h1>{{ page.name }}</h1>
-    {% if page.logo %}
-      <img src="{{ page.logo }}" alt="{{ page.name }} logo" class="company-logo">
-    {% endif %}
-  </div>
+<section class="company-profile">
+  <div class="container common-headline">
+    <div id="leftcol">
+      <header class="company-header heading common-padding--bottom-small common-padding--top-small">
+        <p>MEMBERS »</p>
+        <h1>{{ page.name }}</h1>
+      </header>
 
-  <div class="company-intro">
-    {{ page.intro | markdownify }}
-  </div>
+      <div class="company-intro common-padding--bottom-small">
+        {{ page.intro | markdownify }}
+      </div>
 
-  <div class="company-details">
-    <ul>
-      {% if page.url %}
-        <li><strong>Website:</strong> <a href="{{ page.url }}">{{ page.url }}</a></li>
+      {% if page.rails_usage %}
+        <section class="rails-usage common-padding--bottom-small">
+          <h2>How They Use Rails</h2>
+          {{ page.rails_usage | markdownify }}
+        </section>
       {% endif %}
-      
-      {% if page.company_type %}
-        <li>
-          <strong>Type:</strong> {{ page.company_type }}
-          {% if page.stock_ticker %}
-            ({{ page.stock_ticker }})
-          {% endif %}
-        </li>
-      {% endif %}
-      
-      {% if page.founded_date %}
-        <li><strong>Founded:</strong> {{ page.founded_date }}</li>
-      {% endif %}
-      
-      {% if page.headquarters %}
-        <li><strong>Headquarters:</strong> {{ page.headquarters | markdownify }}</li>
-      {% endif %}
-      
-      {% if page.employees_range %}
-        <li><strong>Employees:</strong> {{ page.employees_range }}</li>
-      {% endif %}
-      
-      {% if page.rails_engineers_range %}
-        <li><strong>Rails Engineers:</strong> {{ page.rails_engineers_range }}</li>
-      {% endif %}
-    </ul>
-  </div>
 
-  {% if page.rails_usage %}
-    <div class="rails-usage">
-      <h2>How They Use Rails</h2>
-      {{ page.rails_usage | markdownify }}
-    </div>
-  {% endif %}
+      {% if page.member_status %}
+        <section class="member-status common-padding--bottom-small">
+          <p>{{ page.member_status | markdownify }}</p>
+        </section>
+      {% endif %}
 
-  {% if page.pull_quote %}
-    <div class="pull-quote">
-      <blockquote>
-        {{ page.pull_quote }}
-        {% if page.quote_author %}
-          <cite>
-            {{ page.quote_author }}
-            {% if page.quote_title %}
-              <span class="title">{{ page.quote_title }}</span>
+      {% if page.pull_quote %}
+        <section class="pull-quote common-padding--bottom-small">
+          <blockquote>
+            <p>{{ page.pull_quote }}</p>
+            {% if page.quote_author %}
+              <cite>
+                {{ page.quote_author }}
+                {% if page.quote_title %}
+                  <span class="title">{{ page.quote_title }}</span>
+                {% endif %}
+              </cite>
             {% endif %}
-          </cite>
+          </blockquote>
+        </section>
+      {% endif %}
+
+      {% if page.github_contributions %}
+        <section class="contributions common-padding--bottom-small">
+          <h2>Open Source Contributions</h2>
+          <ul>
+            {% for contribution in page.github_contributions %}
+              <li>
+                <p>{{ contribution.name }}<br>
+                <a href="{{ contribution.url }}">{{ contribution.url }}</a></p>
+              </li>
+            {% endfor %}
+          </ul>
+        </section>
+      {% endif %}
+
+      {% if page.community %}
+        <section class="community-involvement common-padding--bottom-small">
+          <h2>Community Involvement</h2>
+          {{ page.community | markdownify }}
+        </section>
+      {% endif %}
+
+      {% if page.case_study_url %}
+        <section class="case-study-link common-padding--bottom-small">
+          {{ page.case_study_blurb }}
+          <a href="{{ page.case_study_url }}" class="button">Read Full Case Study</a>
+        </seciton>
+      {% endif %}
+      </section>
+    </div>
+
+    <aside class="company-details">
+      {% if page.logo %}
+        <img src="{{ page.logo }}" alt="{{ page.name }} logo" class="company-logo">
+      {% endif %}
+
+      {% if page.exturl %}
+        <p class="website"><a href="{{ page.exturl }}">{{ page.exturl }}</a></p>
+      {% endif %}
+              
+      <dl class="metapairs">
+        {% if page.company_type %}
+          <dt>Type:</dt>
+          <dd>{{ page.company_type }}
+            {% if page.stock_ticker %}
+              <span>({{ page.stock_ticker }})</span>
+            {% endif %}
+          </dd>
         {% endif %}
-      </blockquote>
-    </div>
-  {% endif %}
 
-  {% if page.member_status %}
-    <div class="member-status">
-      <h2>Rails Foundation Membership</h2>
-      <p>{{ page.member_status }}</p>
-    </div>
-  {% endif %}
+        {% if page.founded_date %}
+          <dt>Founded:</dt>
+          <dd>{{ page.founded_date }}</dd>
+        {% endif %}
+        
+        {% if page.headquarters %}
+          <dt>HQ:</dt>
+          <dd>{{ page.headquarters | markdownify }}</dd>
+        {% endif %}
+      </dl>
+      <div class="people-counts">
+        <p>
+          {% if page.employees_range %}
+            <b>{{ page.employees_range }}</b>
+            # of Employees
+          {% endif %}
+        </p>
 
-  {% if page.github_contributions %}
-    <div class="github-contributions">
-      <h2>Open Source Contributions</h2>
-      <ul>
-        {% for contribution in page.github_contributions %}
-          <li>
-            <a href="{{ contribution.url }}">{{ contribution.name }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-  {% endif %}
-
-  {% if page.community %}
-    <div class="community-involvement">
-      <h2>Community Involvement</h2>
-      {{ page.community | markdownify }}
-    </div>
-  {% endif %}
-
-  {% if page.case_study_url %}
-    <div class="case-study-link">
-      <a href="{{ page.case_study_url }}" class="button">Read Full Case Study</a>
-    </div>
-  {% endif %}
-</div>
+        <p>
+          {% if page.rails_engineers_range %}
+            <b>{{ page.rails_engineers_range }}</b>
+            # Rails Engineers
+          {% endif %}
+        </p>
+      </div>
+    </aside>
+  </div>
+</section>
