basic components and homepage

--- a/_layouts/world/2025/default.html
+++ b/_layouts/world/2025/default.html
@@ -2,7 +2,7 @@
 
 <html lang="en" style="scroll-behavior: smooth">
   {% include world/2025/head.html %}
-  <body>
+  <body class="purple-gradient-background">
     <main id="main-content" tabindex="-1">
       {{ content }}
     </main>
