--- a/_sass/world/2025/base/_typography.scss
+++ b/_sass/world/2025/base/_typography.scss
@@ -1,47 +1,89 @@
 $font-weight-200: 'wght' 200, 'wdth' 100;
 $font-weight-600: 'wght' 600, 'wdth' 100, 'slnt' -12;
+$font-weight-700: 'wght' 600, 'wdth' 100;
 $font-weight-900: 'wght' 900, 'wdth' 100, 'slnt' -12;
 
-$xxx-large: 52px;
-$xx-large: 29px;
+$xxxx-large: 70px;
+$xxx-large: 60px;
+$xx-large: 30px;
 $x-large: 24px;
 $large: 20px;
 $medium: 16px;
 $small: 12px;
 
 h1 {
-  color: white;
-  font-size: $xxx-large;
+  font-size: $xxxx-large;
   font-variation-settings: $font-weight-900;
   letter-spacing: 1px;
   line-height: 65px;
 
-  @media only screen and (max-width: 600px) {
-    line-height: 40px;
-    font-size: $xx-large;
+  @include media(MobileScreens) {
+    font-size: 50px;
+    line-height: 60px;
   }
 }
 
 h2 {
-  color: white;
-  font-size: $xx-large;
+  font-size: $xxx-large;
   font-variation-settings: $font-weight-900;
   letter-spacing: 1px;
 
   @media only screen and (max-width: 600px) {
     font-size: $medium;
   }
-}
 
-p {
-  color: white;
-  font-size: $large;
-  font-variation-settings: $font-weight-900;
-  letter-spacing: 1px;
-
-  @media only screen and (max-width: 600px) {
-    font-size: 18px;
+  &.large-title {
+    font-size: $xxxx-large;
   }
 }
 
+h3, h4 {
+  font-size: $xx-large;
+  font-variation-settings: $font-weight-900;
+  letter-spacing: 1px;
+}
+
+
+p {
+  font-size: $x-large;
+  font-variation-settings: $font-weight-200;
+  letter-spacing: 1px;
+  line-height: 45px;
+
+  @include media(MobileScreens) {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
+
+ul {
+  font-size: $medium;
+  line-height: 30px;;
+  list-style: disc;
+  padding-left: 30px;
+}
+
 .uppercase { text-transform: uppercase; }
+.bold { font-variation-settings: $font-weight-600; }
+.italic { font-style: italic; }
+.text-pink { color: $pink; }
+
+.title-background-gradient {
+  width: fit-content;
+  background-image: $title-background-gradient;
+  padding: 20px 20px 20px 80px;
+  margin-bottom: 50px;
+}
+
+.text-background-gradient {
+  width: fit-content;
+  border-radius: 7px;
+  background-image: $text-background-gradient;
+  padding: 10px 100px;
+  margin-bottom: 20px;
+
+  p {
+    font-size: $xx-large;
+    font-variation-settings: $font-weight-700;
+  };
+}
