--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -4,13 +4,18 @@
 @charset 'utf-8';
 
 @import 'base/reset';
-@import 'base/variables';
-
 @import 'world/2025/base/colors';
-@import 'world/2025/base/body';
+@import 'world/2025/base/media';
 @import 'world/2025/base/typography';
-
-@import 'world/2025/common/button';
 @import 'world/2025/common/gradient_animation';
 
-@import 'world/2025/modules/landing_page';
+@import 'world/2025/base/layout';
+
+@import 'world/2025/common/button';
+@import 'world/2025/common/logos_grid';
+@import 'world/2025/common/polygon_frame';
+@import 'world/2025/common/social_card';
+
+@import "world/2025/modules/image_carousel";
+@import "world/2025/modules/hero_banner";
+@import 'world/2025/modules/homepage';
