--- a/_layouts/world/2025/default.html
+++ b/_layouts/world/2025/default.html
@@ -6,5 +6,7 @@
     <main id="main-content" tabindex="-1">
       {{ content }}
     </main>
+
+    {% include world/2025/components/footer.html %}
   </body>
 </html>
