--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -16,6 +16,7 @@
 @import 'world/2025/common/polygon_frame';
 @import 'world/2025/common/social_card';
 
-@import "world/2025/modules/image_carousel";
+@import 'world/2025/modules/footer';
 @import "world/2025/modules/hero_banner";
 @import 'world/2025/modules/homepage';
+@import "world/2025/modules/image_carousel";
