add navbar and announcement banner

--- a/_layouts/world/2025/default.html
+++ b/_layouts/world/2025/default.html
@@ -3,6 +3,9 @@
 <html lang="en" style="scroll-behavior: smooth">
   {% include world/2025/head.html %}
   <body class="purple-gradient-background">
+    {% include world/2025/components/announcement_banner.html background_color="red-background" %}
+    {% include world/2025/components/navbar.html background_color="purple-background" %}
+
     <main id="main-content" tabindex="-1">
       {{ content }}
     </main>
