--- a/_includes/world/2025/homepage_sections/intro.html
+++ b/_includes/world/2025/homepage_sections/intro.html
@@ -1,7 +1,7 @@
 <div class="section text-with-image-container">
   <div class="text-container">
     <h1>Shaping the future of Ruby on Rails</h1>
-    <p>
+    <p class="larger">
       <span class="bold">Rails World </span>is a two-day, two track community conference featuring <span class="bold">technical talks, demos, networking,
       and keynotes</span> abnout the latest features and best practices in Rails development. 
     </p>
