--- a/_sass/world/2025/modules/_footer.scss
+++ b/_sass/world/2025/modules/_footer.scss
@@ -20,4 +20,8 @@
     line-height: 22px;
     font-variation-settings: $font-weight-200;
   }
+
+  @include media(MobileScreens) {
+    margin-top: 0;
+  }
 }
