--- a/_sass/world/2025/modules/_homepage.scss
+++ b/_sass/world/2025/modules/_homepage.scss
@@ -6,15 +6,34 @@
   h2 {
     text-align: left;
     padding: 100px 0 0 80px;
+
+    @include media(MobileScreens) {
+      padding: 0;
+    }
+  }
+
+  .text-container {
+    width: 50%;
+
+    @include media(MobileScreens) {
+      width: 100%;
+    }
   }
 
   .content-right {
     margin-top: 50px;
-    margin-left: 50%;
+    margin-left: 40%;
 
     @include media(MobileScreens){
-      margin-left: 0;
+      margin: 0;
     }
+  }
+
+  @include media(MobileScreens) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px
   }
 }
 
@@ -23,4 +42,10 @@
   justify-content: center;
   gap: 20px;
   margin: 80px 0;
+
+  @include media(MobileScreens) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 0;
+  }
 }
