--- a/_includes/world/2025/components/navbar.html
+++ b/_includes/world/2025/components/navbar.html
@@ -1,32 +1,38 @@
-<header id="header-2024">
-  <nav id="desktopHeader" class="nav {{ include.background_color }}">
-    <div class="nav-container">
-      <a href="/world/2025" class="nav__logo">
-        <img class="temp" alt="Rails World Logo 2025"
-          src="/assets/world/2025/logos/RW25_logo-white-trademark.png" />
-      </a>
-    </div>
+<header id="header-2025" class="{{ include.background_color }}">
+  <nav id="navbar-desktop" class="nav">
+    <a href="/world/2025" class="logo-container">
+      <img alt="Rails World Logo 2025" src="/assets/world/2025/logos/RW25_logo-white-trademark.png" />
+    </a>
 
-    <div class="center">
-      <a href="/world/2025/speakers" class="nav-link">Speakers</a>
-      <a href="/world/2025/programme.html" class="nav-link">Programme</a>
-      <a href="/world/2025/faq/general" class="nav-link">FAQs</a>
-      <a href="/world/2025/rails_at_scale" class="nav-link">Rails at Scale Summit</a>
+    <div class="nav-links-container">
+      {% include world/2025/components/navbar_links.html %}
     </div>
   </nav>
 
-  <nav id="mobileHeader" class="nav">
-    <div class="center">
-      <a href="/world/2024" class="nav__logo">
-        <img class="longLogo" alt="Rails World Logo 2024" src="/assets/world/2024/images/rails_logos/white-logo-long-dated.svg" />
+  <nav id="navbar-mobile">
+    <div class="nav-content">
+      <a href="/world/2025" class="logo-container">
+        <img alt="Rails World Logo 2025" src="/assets/world/2025/logos/RW25_logo-white-trademark.png" />
       </a>
+      <button class="menu-toggle" aria-label="Toggle Menu">
+        ☰
+      </button>
     </div>
 
-    <div class="nav-container right">
-      <a href="" class="nav-link">Speakers</a>
-      <a href="" class="nav-link">Programme</a>
-      <a href="" class="nav-link">FAQs</a>
-      <a href="" class="nav-link">Rails at Scale Summit</a>
+    <div class="mobile-menu">
+      {% include world/2025/components/navbar_links.html %}
     </div>
   </nav>
 </header>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const nav = document.querySelector('#navbar-mobile');
+    const toggle = document.querySelector('.menu-toggle');
+    const mobileMenu = document.querySelector('.mobile-menu')
+
+    toggle.addEventListener('click', () => {
+      mobileMenu.classList.toggle('menu-open');
+    });
+  });
+</script>
