--- a/_sass/world/2025/modules/_navbar.scss
+++ b/_sass/world/2025/modules/_navbar.scss
@@ -1,55 +1,37 @@
-$headerHeight: 100px;
+#header-2025 {
+  position: sticky !important;
+  top: 0;
+  z-index: 900 !important;
+  width: 100%;
+  border-bottom: 2px solid white;
 
-header {
-    position: sticky !important;
-    top: 0;
-    z-index: 900 !important;
-    width: 100%;
-
-    #desktopHeader {
-      display: flex;
-    }
-
-    #mobileHeader {
-      display: none;
-    }
-
-    @media only screen and (max-width: 800px) {
-      #desktopHeader {
-          display: none;
-      }
-
-      #mobileHeader {
-          display: flex;
-      }
-    }
-}
-
-.nav {
   &.purple-background {  background-color: $dark-purple; }
   &.red-background { background-color: $red; }
 
+  #navbar-desktop { display: flex; }
+  #navbar-mobile { display: none; }
+
+  @include media(MobileScreens) {
+    #navbar-desktop { display: none; }
+    #navbar-mobile { display: flex; }
+  }
+}
+
+#navbar-desktop {
   align-items: center;
   justify-content: space-between;
-  height: $headerHeight;
-  border-bottom: 2px solid white;
   padding: 0 30px;
+  height: 100px;
 
-  &__logo {
+  .logo-container {
     display: flex;
     align-items: center;
     justify-content: center;
 
-    .temp {
-        width: 140px;
-    }
-
-    .longLogo {
-        width: 95%;
-    }
+    img { width: 140px; }
   }
 
-  .center {
+  .nav-links-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,12 +46,58 @@ header {
   }
 }
 
-#mobileHeader {
-  .nav-container {
-      width: 120px;
+#navbar-mobile {
+  padding: 10px;
+  position: relative;
+  height: 60px;
+
+  .nav-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
   }
 
-  .center {
-      width: 400px;
+  .logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img { width: 80px; }
+  }
+
+  .menu-toggle {
+    position: absolute;
+    right: 0;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 40px;
+    cursor: pointer;
+  }
+
+  .mobile-menu {
+    display: none;
+    flex-direction: column;
+    background-color: $dark-purple;
+    padding: 10px;
+    position: absolute;
+    top: 110%;
+    left: 0;
+    right: 0;
+
+    a {
+      padding: 10px 0;
+      color: white;
+      text-decoration: none;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
+      &:last-child { border: none }
+    }
+
+    &.menu-open {
+      display: flex;
+    }
   }
 }
