fix button primary

--- a/_includes/world/2025/homepage_sections/hero_banner.html
+++ b/_includes/world/2025/homepage_sections/hero_banner.html
@@ -21,5 +21,5 @@
   </div>
 
   <img src="/assets/world/2025/images/RW25_logo-white-square.png" alt="Rails World 2025 Square Logo" id="logo-world-2025"/>
-  <a href="" class="button-text-gradient"><span>Tickets coming soon!</span></a>
+  <a href="" class="button-primary"><span>Tickets coming soon!</span></a>
 </div>
