--- a/_sass/world/2025/modules/_faq.scss
+++ b/_sass/world/2025/modules/_faq.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: flex-start;
   gap: 50px;
-  margin-top: 40px;
+  margin-top: 100px;
   padding: 0 80px;
 
   @include media(MobileScreens) {
@@ -29,10 +29,11 @@
     a {
       color: white;
       font-size: $large;
+      font-variation-settings: $font-weight-700;
       text-decoration: none;
       transition: all 0.25s;
 
-      &:hover { text-decoration: underline }
+      &:hover { text-decoration: underline; }
     }
 
     &:last-child { border-right: none; }
